# piki

./: .coverage  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
adl/: README.md  pyproject.toml
adl/docs/: README.md
adl/docs/adr/: 001-adl-as-compiler.md  002-compiler-architecture.md  003-interface-first-mating.md  004-interface-signature.md
adl/docs/concepts/: 01-layered-model.md  02-interface-and-coordinate-system.md  03-mating-kinds-and-dof.md  04-layout-and-placement-chain.md  README.md
adl/docs/guides/: modeling-assemblies.md
adl/examples/: README.md
adl/examples/01-face-gasket/: piki.toml
adl/examples/01-face-gasket/instances/parts/: BOLT-M16-1.yaml  BOLT-M16-2.yaml  BOLT-M16-3.yaml  BOLT-M16-4.yaml  GASKET-PTFE.yaml  PIPE-FLANGE.yaml  PUMP-FLANGE.yaml
adl/examples/01-face-gasket/layouts/: layout.yaml
adl/examples/01-face-gasket/mates/flange-seal/: BOLTS.yaml  GASKET-PIPE.yaml  PUMP-GASKET.yaml
adl/examples/02-shaft-bushing/: piki.toml
adl/examples/02-shaft-bushing/instances/parts/: BUSHING-BRONZE.yaml  HOUSING.yaml  SHAFT-25.yaml
adl/examples/02-shaft-bushing/layouts/: layout.yaml
adl/examples/02-shaft-bushing/mates/clearance-fit/: BUSHING-HOUSING.yaml  SHAFT-BUSHING.yaml
adl/examples/03-dovetail-slide/: piki.toml
adl/examples/03-dovetail-slide/instances/parts/: DOVETAIL-BASE.yaml  DOVETAIL-SLIDE.yaml
adl/examples/03-dovetail-slide/layouts/: layout.yaml
adl/examples/03-dovetail-slide/mates/dovetail/: BASE-SLIDE.yaml
adl/examples/04-spur-gears/: piki.toml
adl/examples/04-spur-gears/instances/parts/: GEAR-DRIVEN.yaml  GEAR-DRIVER.yaml
adl/examples/04-spur-gears/layouts/: layout.yaml
adl/examples/04-spur-gears/mates/gear-mesh/: DRIVER-DRIVEN.yaml
adl/examples/05-worm-drive/: piki.toml
adl/examples/05-worm-drive/instances/parts/: WORM-GEAR.yaml  WORM.yaml
adl/examples/05-worm-drive/layouts/: layout.yaml
adl/examples/05-worm-drive/mates/worm-mesh/: WORM-GEAR.yaml
adl/examples/06-fiber-connectors/: piki.toml
adl/examples/06-fiber-connectors/instances/devices/: ACCESS-SW.yaml  ODF-PANEL.yaml
adl/examples/06-fiber-connectors/instances/fibers/: LC-DUPLEX-PATCH.yaml
adl/examples/06-fiber-connectors/instances/ports/: SFP28-MOD-A.yaml  SFP28-MOD-B.yaml
adl/examples/06-fiber-connectors/layouts/: layout.yaml
adl/examples/06-fiber-connectors/mates/patch-cord/: LC-RX.yaml  LC-TX.yaml  SC-RX.yaml  SC-TX.yaml
adl/examples/06-fiber-connectors/mates/sfp-insert/: SW-SFP28-A.yaml  SW-SFP28-B.yaml
adl/examples/07-usb-interfaces/: piki.toml
adl/examples/07-usb-interfaces/instances/parts/: PCB-MAIN.yaml  USB-A-DEVICE.yaml  USB-C-CABLE.yaml
adl/examples/07-usb-interfaces/layouts/: layout.yaml
adl/examples/07-usb-interfaces/mates/usb-mate/: PCB-USBA.yaml  PCB-USBC.yaml
adl/examples/assets/: bolt.step  bushing.step  dovetail_base.step  dovetail_slide.step  flange.step  gasket.step  housing.step  odf.step  pcb.step  sfp28.step  shaft.step  spur_gear_20t.step  spur_gear_40t.step  switch.step  usb_a.step  usb_c.step  worm.step  worm_gear.step
adl/src/adl/: __init__.py  diagnostics.py
adl/src/adl/compiler/: __init__.py  ast_.py  compile.py  constraint_solver.py  hir.py  interface_signature.py  mating_kinds.py  mir.py  pass_manager.py  span.py  symbols.py  type_registry_builtins.py  type_system.py
adl/src/adl/compiler/passes/: __init__.py  back_compat.py  lowering.py  mate_sugar.py  mir_validation.py  model_merge.py  spatial_collision.py  symbol_resolve.py  toml_parse.py  yaml_parse.py
adl/src/adl/geometry/: __init__.py  assembly_builder.py  assembly_scene.py  constraint_solver.py  interface_signature.py  models.py  provider.py
adl/src/adl/geometry/passes/: spatial_collision.py
adl/src/adl/models/: __init__.py  catalog.py  geometry.py  grid.py  interface.py  layout.py
adl/src/adl/parsing/: __init__.py  grid_loader.py  layout_loader.py  mate_loader.py  yaml_source.py
adl/src/adl/project/: __init__.py  loader.py  project.py
adl/src/adl/types/: __init__.py  registry.py
adl/src/adl/validation/: __init__.py  validator.py
adl/tests/: conftest.py
adl/tests/integration/: test_examples_baseline.py
adl/tests/unit/: test_mir_passes.py  test_project_loader.py
aql/: README.md  pyproject.toml
aql/src/aql/: __init__.py  query.py
assembly/: README.md
assembly/fc-fiber-connector/: README.md  assembly.yaml  index.legacy.html  piki.toml
assembly/fire-extinguisher/: README.md  assembly.yaml  index.legacy.html  piki.toml
assembly/sfp28-module/: README.md  assembly.yaml  index.legacy.html  piki.toml
docs/: index.md
docs/adr/: 001-geometry-and-physics-engine.md  001-project-organization.md  002-plugin-architecture.md  002-text-native-and-file-per-instance.md  003-plugin-architecture.md  003-quality-checks-and-diagnostics.md  004-generator-as-deliverable-pipeline.md  004-multi-level-quality-checks.md  004-spatial-visualization-strategy.md  005-connection-as-instance.md  005-lsp-compatible-diagnostics.md  005-piki-studio.md  006-cad-asset-reference.md  006-mating-graph.md  006-piki-studio-web-viewer.md  007-cad-asset-reference.md  007-connection-as-instance.md  008-instance-layout-separation.md  008-mating-graph.md  008-spatial-visualization-strategy.md  009-generator-as-deliverable-pipeline.md  009-nested-projects-and-cde.md  009-piki-studio.md  010-brownfield-reference-instance.md  011-catalog-as-authority-layer.md  README.md
docs/concepts/: 00-why-piki.md  01-core-concepts.md  01-quickstart.md  02-core-concepts.md  02-writing-rules.md  03-advanced.md  03-writing-rules.md  04-advanced.md  04-text-native-and-agent-oriented.md  05-ai-readiness.md  05-ecosystem-positioning.md  06-knowledge-maturation.md
docs/initiatives/: 001-sd-hwe-bench-benchmark-survey.md  001-sd-hwe-bench.md  (+4 more)
landing/: index.html
samples/: README.md
studio/: ARCHITECTURE.md  PRD.md  README.md  index.html  package-lock.json  package.json
viewer/: package-lock.json  package.json  tsconfig.json  vite.config.ts
(+541 files in other folders)
