[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piki"
version = "0.1.0"
description = "Text-Native Declarative System Modeling Framework (DSMF) — 用文本定义设计，用规则检查合理性。"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "IndenScale", email = "dev@indenscale.com"},
]
keywords = [
    "engineering",
    "validation",
    "yaml",
    "design-check",
    "rule-engine",
    "sdm",
    "folder-db",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "aql",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
usd = ["usd-core>=24.0"]
geometry = ["manifold3d>=2.0"]
all = ["usd-core>=24.0", "manifold3d>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://indenscale.github.io/piki/"
Documentation = "https://github.com/indenscale/piki/tree/main/docs"
Repository = "https://github.com/indenscale/piki.git"
Issues = "https://github.com/indenscale/piki/issues"
Changelog = "https://github.com/indenscale/piki/blob/main/CHANGELOG.md"

[project.scripts]
piki = "piki.cli:main"

[tool.setuptools.packages.find]
where = ["src", "aql/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# FIXME: 项目当前类型注解不完整，临时禁用一批 mypy 错误代码，
# 待类型系统完善后再逐步收紧。
disable_error_code = [
    "import-untyped",
    "name-defined",
    "attr-defined",
    "arg-type",
    "assignment",
    "valid-type",
    "index",
    "var-annotated",
    "misc",
    "no-redef",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.lint.isort]
known-first-party = ["piki"]

[tool.ruff.lint.per-file-ignores]
# from __future__ import annotations 环境下，函数签名中的字符串注解被 ruff 当作未定义名称
"src/piki/core/models/base.py" = ["F821"]
"src/piki/ext/geometry/csg.py" = ["F821"]
"src/piki/ext/geometry/__init__.py" = ["F401"]
"src/piki/extensions/datacenter/plugin.py" = ["F821"]
"src/piki/extensions/telecom/plugin.py" = ["F821"]
"tests/unit/test_checker.py" = ["E402"]

[tool.ruff.format]
