[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adl"
version = "0.1.0"
description = "Assembly Definition Language (ADL) — 装配体定义语言运行时"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "IndenScale", email = "dev@indenscale.com"},
]
keywords = [
    "engineering",
    "validation",
    "yaml",
    "declarative-modeling",
    "assembly",
    "adl",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://indenscale.github.io/piki/"
Documentation = "https://github.com/indenscale/piki/tree/main/adl"
Repository = "https://github.com/indenscale/piki.git"
Issues = "https://github.com/indenscale/piki/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.lint.isort]
known-first-party = ["adl"]

[tool.ruff.lint.per-file-ignores]
# from __future__ import annotations 环境下，函数签名中的字符串注解被 ruff 当作未定义名称
"src/adl/models/base.py" = ["F821"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disable_error_code = [
    "import-untyped",
    "name-defined",
    "attr-defined",
    "arg-type",
    "assignment",
    "valid-type",
    "index",
    "var-annotated",
    "misc",
    "no-redef",
]
