[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aql"
version = "0.1.0"
description = "AQL — Abstract Query Language: a lazy, chainable, Django-style query DSL for Python collections."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "IndenScale", email = "dev@indenscale.com"},
]
keywords = [
    "query",
    "dsl",
    "collections",
    "django-style",
    "filtering",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://indenscale.github.io/piki/"
Documentation = "https://github.com/indenscale/piki/tree/main/aql"
Repository = "https://github.com/indenscale/piki.git"
Issues = "https://github.com/indenscale/piki/issues"

[tool.setuptools.packages.find]
where = ["src"]
